Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124544

[gstreamer] duration is not extracted from metadata

XMLWordPrintable

    • Linux/X11
    • 8f4f8547b (dev), b955fd12c (6.7), 47657edb9 (tqtc/lts-6.5), 32c77267a (dev), 6fd4e7381 (6.7), ee5a65455 (tqtc/lts-6.5)
    • Multimedia wk 17-18, Multimedia wk 19-20

      `tst_QMediaPlayerBackend::durationDetectionIssues(stream-duration-in-metadata)` fails. the duration seems to be included inside a GST_TAG_EXTENDED_COMMENT, not necessarily in GST_TAG_DURATION

        For Gerrit Dashboard: QTBUG-124544
        # Subject Branch Project Status CR V

            timblechmann tim blechmann
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes