GStreamer: fix access to duration metadata

Fixes: QTBUG-124544
Pick-to: 6.5
Change-Id: I6cf975fab3644a7c5d51908f30441a22e6321573
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
(cherry picked from commit 32c77267af32a82da040811d4b6d2274b34fa577)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>